# ha-climate-control

./: CLAUDE.md  Dockerfile.test  README.md  SPEC.md  docker-compose.test.yml  hacs.json  pyproject.toml
.claude/: settings.local.json
.claude/commands/: deploy-check.md  review.md  test.md
.claude/skills/: ha-integration.md
.github/workflows/: ci.yml
custom_components/climate_control/: __init__.py  climate.py  config_flow.py  const.py  coordinator.py  manifest.json  presence.py  schedule.py  solar.py  strings.json
custom_components/climate_control/translations/: en.json
ha_climate_control.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: pre-push
tests/: conftest.py  test_climate.py  test_config_flow.py  test_coordinator.py  test_presence.py  test_schedule.py  test_solar.py
